# financial-acquisition-analysis

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
backend/deploy/: README.md
backend/deploy/compose/: docker-compose.prod.yml
backend/deploy/k8s/: deployment.yaml  secret.example.yaml
backend/deploy/systemd/: ma-mna-analyzer.service  secrets.env.example
backend/src/ma_mna_analyzer/: __init__.py  __main__.py  api.py  config.py  discovery.py  document_fetcher.py  models.py  openai_service.py  orchestrator.py  prompt_builder.py  utils.py
backend/tests/: test_config.py  test_prompt_builder.py  test_utils_json.py
